--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1102,6 +1102,9 @@ margin-left:55%;
 
 	}
 }		</style>
+
+<link rel="stylesheet" href="./btc_styles/media-and-career.css">
+
   </head>
   <body id="body"
     class="wp-singular page-template-default page page-id-1091 wp-theme-anthem_tcd083 translatepress-ja use_header_fix use_mobile_header_fix elementor-default elementor-kit-1156">
@@ -1243,16 +1246,16 @@ margin-left:55%;
         </div>
       </div>
 
-      <div class="inner">
-        <div class="box">
-          <div class="box__career">
-            <div class="box__img">
+      <div class="mac__inner">
+        <div class="mac">
+          <div class="mac__career">
+            <div class="mac__img">
               <img src="./img/media-career/aya-kamiyotsumoto.jpg" width="350" height="350" alt="上四元 絢">
             </div>
-            <div class="box__cont">
-              <p class="box__position">株式会社コンヴァノ 代表取締役社長</p>
-              <p class="box__name">上四元 絢<span class="box__name-en">Aya Kamiyotsumoto</span></p>
-              <div class="box__sns">
+            <div class="mac__cont">
+              <p class="mac__position">株式会社コンヴァノ 代表取締役社長</p>
+              <p class="mac__name">上四元 絢<span class="mac__name-en">Aya Kamiyotsumoto</span></p>
+              <div class="mac__sns">
                 <a href="https://x.com/KeMfm36">
                   <img src="./img/media-career/icon_x.png" width="32" height="32" alt="X アイコン">
                 </a>
@@ -1260,172 +1263,172 @@ margin-left:55%;
                   <img src="./img/media-career/icon_instagram.png" width="32" height="32" alt="Instagram アイコン">
                 </a>
               </div>
-              <div class="box__table">
-                <dl class="box__dl">
-                  <dt class="box__dt">2010年12月</dt>
-                  <dd class="box__dd">旧（株）コンヴァノ（現 当社）入社<br>営業部・ファストネイル銀座店配属</dd>
+              <div class="mac__table">
+                <dl class="mac__dl">
+                  <dt class="mac__dt">2010年12月</dt>
+                  <dd class="mac__dd">旧（株）コンヴァノ（現 当社）入社<br>営業部・ファストネイル銀座店配属</dd>
 
-                  <dt class="box__dt">2011年5月</dt>
-                  <dd class="box__dd">当社営業部・ファストネイル大宮店店長</dd>
+                  <dt class="mac__dt">2011年5月</dt>
+                  <dd class="mac__dd">当社営業部・ファストネイル大宮店店長</dd>
 
-                  <dt class="box__dt">2015年3月</dt>
-                  <dd class="box__dd">同営業部スーパーバイザー</dd>
+                  <dt class="mac__dt">2015年3月</dt>
+                  <dd class="mac__dd">同営業部スーパーバイザー</dd>
 
-                  <dt class="box__dt">2017年1月</dt>
-                  <dd class="box__dd">同トレーニング部グループリーダー</dd>
+                  <dt class="mac__dt">2017年1月</dt>
+                  <dd class="mac__dd">同トレーニング部グループリーダー</dd>
 
-                  <dt class="box__dt">2019年4月</dt>
-                  <dd class="box__dd">同管理部グループリーダー</dd>
+                  <dt class="mac__dt">2019年4月</dt>
+                  <dd class="mac__dd">同管理部グループリーダー</dd>
 
-                  <dt class="box__dt">2022年7月</dt>
-                  <dd class="box__dd">同経営企画室グループリーダー</dd>
+                  <dt class="mac__dt">2022年7月</dt>
+                  <dd class="mac__dd">同経営企画室グループリーダー</dd>
 
-                  <dt class="box__dt">2022年11月</dt>
-                  <dd class="box__dd">同執行役員営業部及び人材教育部管掌</dd>
+                  <dt class="mac__dt">2022年11月</dt>
+                  <dd class="mac__dd">同執行役員営業部及び人材教育部管掌</dd>
 
-                  <dt class="box__dt">2023年6月</dt>
-                  <dd class="box__dd">同代表取締役社長（現任）</dd>
+                  <dt class="mac__dt">2023年6月</dt>
+                  <dd class="mac__dd">同代表取締役社長（現任）</dd>
                 </dl>
               </div>
             </div>
           </div>
 
-          <p class="box__head">出演実績</p>
-          <div class="box__media">
-            <div class="box__media-item">
-              <a href="https://www.radionikkei.jp/ohayo/" class="box__media-link">
-                <div class="box__media-img">
+          <p class="mac__head">出演実績</p>
+          <div class="mac__media">
+            <div class="mac__media-item">
+              <a href="https://www.radionikkei.jp/ohayo/" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">web</span>
-                  <span class="box__media-date">2025年9月4日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">web</span>
+                  <span class="mac__media-date">2025年9月4日</span>
                 </div>
-                <p class="box__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
+                <p class="mac__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
               </a>
             </div>
           </div>
         </div>
 
-        <div class="box">
-          <div class="box__career">
-            <div class="box__img">
+        <div class="mac">
+          <div class="mac__career">
+            <div class="mac__img">
               <img src="./img/media-career/motokiyo-aqzuma.jpg" width="350" height="350" alt="東 大陽">
             </div>
-            <div class="box__cont">
-              <p class="box__position">株式会社コンヴァノ 取締役｜ビットコイン保有戦略室 責任者<br>株式会社Convano Consulting　代表取締役<br>虎ノ門キャピタル株式会社　代表取締役</p>
-              <p class="box__name">東 大陽<span class="box__name-en">Motokiyo Azuma</span></p>
-              <div class="box__sns">
+            <div class="mac__cont">
+              <p class="mac__position">株式会社コンヴァノ 取締役｜ビットコイン保有戦略室 責任者<br>株式会社Convano Consulting　代表取締役<br>虎ノ門キャピタル株式会社　代表取締役</p>
+              <p class="mac__name">東 大陽<span class="mac__name-en">Motokiyo Azuma</span></p>
+              <div class="mac__sns">
                 <a href="https://x.com/MotokiyoAzuma">
                   <img src="./img/media-career/icon_x.png" width="32" height="32" alt="X アイコン">
                 </a>
-                <a href="https://www.instagram.com/">
-                  <img src="./img/media-career/icon_instagram.png" width="32" height="32" alt="Instagram アイコン">
+                <a href="https://www.youtube.com/@MotokiyoA.convano">
+                  <img src="./img/media-career/icon_youtube.png" width="32" height="32" alt="Youtube アイコン">
                 </a>
               </div>
-              <p class="box_text">「事業で稼ぎ、構造で守る」二刀流企業設計者｜BTC保有戦略責任者／新規事業×財務戦略のクロスオーバー実行者。<br>元エンジニア×事業開発×財務×ガバナンスのクロスオーバー領域を専門とし、「円で稼ぎ、円を守る」企業設計を追求しています。</p>
-              <div class="box__table">
-                <dl class="box__dl">
-                  <dt class="box__dt">2008年10月</dt>
-                  <dd class="box__dd">（株）コスパクリエーション　入社</dd>
+              <p class="mac_text">「事業で稼ぎ、構造で守る」二刀流企業設計者｜BTC保有戦略責任者／新規事業×財務戦略のクロスオーバー実行者。<br>元エンジニア×事業開発×財務×ガバナンスのクロスオーバー領域を専門とし、「円で稼ぎ、円を守る」企業設計を追求しています。</p>
+              <div class="mac__table">
+                <dl class="mac__dl">
+                  <dt class="mac__dt">2008年10月</dt>
+                  <dd class="mac__dd">（株）コスパクリエーション　入社</dd>
 
-                  <dt class="box__dt">2014年8月</dt>
-                  <dd class="box__dd">（株）コスパクリエーション　入社</dd>
+                  <dt class="mac__dt">2014年8月</dt>
+                  <dd class="mac__dd">（株）コスパクリエーション　入社</dd>
 
-                  <dt class="box__dt">2018年5月</dt>
-                  <dd class="box__dd">（株）ビジョン・コンサルティング　入社</dd>
+                  <dt class="mac__dt">2018年5月</dt>
+                  <dd class="mac__dd">（株）ビジョン・コンサルティング　入社</dd>
 
-                  <dt class="box__dt">2020年12月</dt>
-                  <dd class="box__dd">（株）メディカルフロンティア　入社</dd>
+                  <dt class="mac__dt">2020年12月</dt>
+                  <dd class="mac__dd">（株）メディカルフロンティア　入社</dd>
 
-                  <dt class="box__dt">2024年3月</dt>
-                  <dd class="box__dd">当社執行役員 経営戦略本部管掌</dd>
+                  <dt class="mac__dt">2024年3月</dt>
+                  <dd class="mac__dd">当社執行役員 経営戦略本部管掌</dd>
 
-                  <dt class="box__dt">2025年5月</dt>
-                  <dd class="box__dd">（株）Convano consulting　代表取締役社長（現任）</dd>
+                  <dt class="mac__dt">2025年5月</dt>
+                  <dd class="mac__dd">（株）Convano consulting　代表取締役社長（現任）</dd>
 
-                  <dt class="box__dt">2025年6月</dt>
-                  <dd class="box__dd">当社取締役（現任）</dd>
+                  <dt class="mac__dt">2025年6月</dt>
+                  <dd class="mac__dd">当社取締役（現任）</dd>
 
-                  <dt class="box__dt">2025年6月</dt>
-                  <dd class="box__dd">M&Aテクノマージコンサルティング（株） （現 虎ノ門キャピタル（株））　代表取締役社長（現任）</dd>
+                  <dt class="mac__dt">2025年6月</dt>
+                  <dd class="mac__dd">M&Aテクノマージコンサルティング（株） （現 虎ノ門キャピタル（株））　代表取締役社長（現任）</dd>
                 </dl>
               </div>
             </div>
           </div>
 
-          <p class="box__head">出演実績</p>
-          <div class="box__media">
-            <div class="box__media-item">
-              <a href="https://www.radionikkei.jp/ohayo/" class="box__media-link">
-                <div class="box__media-img">
+          <p class="mac__head">メディア出演実績</p>
+          <div class="mac__media">
+            <div class="mac__media-item">
+              <a href="https://www.radionikkei.jp/ohayo/" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">web</span>
-                  <span class="box__media-date">2025年9月4日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">web</span>
+                  <span class="mac__media-date">2025年9月4日</span>
                 </div>
-                <p class="box__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
+                <p class="mac__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
               </a>
             </div>
-            <div class="box__media-item">
-              <a href="https://www.youtube.com/watch?v=VOLOgvYj3Sk&t=15s" class="box__media-link">
-                <div class="box__media-img">
+            <div class="mac__media-item">
+              <a href="https://www.youtube.com/watch?v=VOLOgvYj3Sk&t=15s" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb01.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">YouTube</span>
-                  <span class="box__media-date">2025年10月1日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">YouTube</span>
+                  <span class="mac__media-date">2025年10月1日</span>
                 </div>
-                <p class="box__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン保有企業 コンヴァノ取締役に疑問と噂を質問します」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン保有企業 コンヴァノ取締役に疑問と噂を質問します」に出演しました。</p>
               </a>
             </div>
-            <div class="box__media-item">
-              <a href="https://www.youtube.com/watch?v=oxgiLVdF9Ms" class="box__media-link">
-                <div class="box__media-img">
+            <div class="mac__media-item">
+              <a href="https://www.youtube.com/watch?v=oxgiLVdF9Ms" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb02.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">YouTube</span>
-                  <span class="box__media-date">2025年9月22日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">YouTube</span>
+                  <span class="mac__media-date">2025年9月22日</span>
                 </div>
-                <p class="box__media-title">投資の美学 逆襲のBTCチャンネル「コンヴァノ取締役が語る｜ビットコイン関連株バブル後に生き残る企業とは」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「コンヴァノ取締役が語る｜ビットコイン関連株バブル後に生き残る企業とは」に出演しました。</p>
               </a>
             </div>
-            <div class="box__media-item">
-              <a href="" class="box__media-link">
-                <div class="box__media-img">
+            <div class="mac__media-item">
+              <a href="" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">web</span>
-                  <span class="box__media-date">2025年9月18日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">web</span>
+                  <span class="mac__media-date">2025年9月18日</span>
                 </div>
-                <p class="box__media-title">ビジネスニュースメディア「CoinDesk JAPAN」にて取材を受けました。</p>
+                <p class="mac__media-title">ビジネスニュースメディア「CoinDesk JAPAN」にて取材を受けました。</p>
               </a>
             </div>
-            <div class="box__media-item">
-              <a href="https://www.youtube.com/watch?v=-BkIoTuq4wU" class="box__media-link">
-                <div class="box__media-img">
+            <div class="mac__media-item">
+              <a href="https://www.youtube.com/watch?v=-BkIoTuq4wU" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb03.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">YouTube</span>
-                  <span class="box__media-date">2025年9月10日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">YouTube</span>
+                  <span class="mac__media-date">2025年9月10日</span>
                 </div>
-                <p class="box__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株｜コンヴァノの成長戦略【後編】ーメタプラネットへの敬意ー」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株｜コンヴァノの成長戦略【後編】ーメタプラネットへの敬意ー」に出演しました。</p>
               </a>
             </div>
-            <div class="box__media-item">
-              <a href="https://www.youtube.com/watch?v=DZdp7fk8l1w" class="box__media-link">
-                <div class="box__media-img">
+            <div class="mac__media-item">
+              <a href="https://www.youtube.com/watch?v=DZdp7fk8l1w" class="mac__media-link">
+                <div class="mac__media-img">
                   <img src="./img/media-career/thumb04.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
-                <div class="box__media-meta">
-                  <span class="box__media-cate">YouTube</span>
-                  <span class="box__media-date">2025年9月6日</span>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">YouTube</span>
+                  <span class="mac__media-date">2025年9月6日</span>
                 </div>
-                <p class="box__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株 コンヴァノ｜取締役が語る2.1万BTC保有戦略と覚悟」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株 コンヴァノ｜取締役が語る2.1万BTC保有戦略と覚悟」に出演しました。</p>
               </a>
             </div>
           </div>
