【修正】最終調節

--- a/media-and-career-higashi.html
+++ b/media-and-career-higashi.html
@@ -1234,10 +1234,8 @@ margin-left:55%;
           class="image_layout_type2 image_layout2_type2 image_layout_mobile_type3 text_layout_type2 animation_type1 no_layer_image">
           <div id="page_header_inner">
             <div class="caption">
-              <p class="sub_title animate_item rich_font_type2"><span
-                  class="btc_news_pageTitle">出演実績・経歴</span></p>
-              <h1 class="catch  animate_item rich_font_type2">Media and
-                Career</h1>
+              <p class="sub_title animate_item rich_font_type2 animate"><span>出演実績・経歴</span></p>
+              <h1 class="catch animate_item rich_font_type2 animate">Media and Career</h1>
             </div>
           </div>
           <div class="overlay" style="background:rgba(0,0,0,0.1);"></div>
@@ -1257,85 +1255,85 @@ margin-left:55%;
             <div class="mac__media-item">
               <a href="https://www.radionikkei.jp/ohayo/" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb_logo.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
-                  <span class="mac__media-cate">web</span>
-                  <span class="mac__media-date">2025年9月4日</span>
+                  <span class="mac__media-cate">ラジオ</span>
+                  <span class="mac__media-date">2025年10月7日</span>
                 </div>
-                <p
-                  class="mac__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
+                <p class="mac__media-title">ラジオNIKKEI「おはようマーケットIR特集」にゲストとして出演しました。</p>
+              </a>
+            </div>
+            <div class="mac__media-item">
+              <a href="https://newspicks.com/movie-series/158/?movieId=5962" target="_blank" rel="noopener noreferrer" class="mac__media-link">
+                <div class="mac__media-img">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                </div>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">Web動画</span>
+                  <span class="mac__media-date">2025年10月4日</span>
+                </div>
+                <p class="mac__media-title">ビジネスニュースメディア「NewsPicks」にて取材を受けました。</p>
               </a>
             </div>
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=VOLOgvYj3Sk&t=15s" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb01.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb01.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
                   <span class="mac__media-date">2025年10月1日</span>
                 </div>
-                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン保有企業
-                  コンヴァノ取締役に疑問と噂を質問します」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン保有企業 コンヴァノ取締役に疑問と噂を質問します」に出演しました。</p>
               </a>
             </div>
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=oxgiLVdF9Ms" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb02.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb02.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
                   <span class="mac__media-date">2025年9月22日</span>
                 </div>
-                <p class="mac__media-title">投資の美学
-                  逆襲のBTCチャンネル「コンヴァノ取締役が語る｜ビットコイン関連株バブル後に生き残る企業とは」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「コンヴァノ取締役が語る｜ビットコイン関連株バブル後に生き残る企業とは」に出演しました。</p>
               </a>
             </div>
             <div class="mac__media-item">
-              <a href class="mac__media-link">
+              <a href="https://www.coindeskjapan.com/314079/" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb_logo.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
-                  <span class="mac__media-cate">web</span>
-                  <span class="mac__media-date">2025年9月18日</span>
+                  <span class="mac__media-cate">Web</span>
+                  <span class="mac__media-date">2025年9月15日</span>
                 </div>
-                <p class="mac__media-title">ビジネスニュースメディア「CoinDesk
-                  JAPAN」にて取材を受けました。</p>
+                <p class="mac__media-title">ビジネスニュースメディア「CoinDesk JAPAN」にて取材を受けました。</p>
               </a>
             </div>
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=-BkIoTuq4wU" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb03.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb03.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
                   <span class="mac__media-date">2025年9月10日</span>
                 </div>
-                <p class="mac__media-title">投資の美学
-                  逆襲のBTCチャンネル「ビットコイン関連株｜コンヴァノの成長戦略【後編】ーメタプラネットへの敬意ー」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株｜コンヴァノの成長戦略【後編】ーメタプラネットへの敬意ー」に出演しました。</p>
               </a>
             </div>
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=DZdp7fk8l1w" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb04.jpg" width="240"
-                    height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb04.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
                   <span class="mac__media-date">2025年9月6日</span>
                 </div>
-                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株
-                  コンヴァノ｜取締役が語る2.1万BTC保有戦略と覚悟」に出演しました。</p>
+                <p class="mac__media-title">投資の美学 逆襲のBTCチャンネル「ビットコイン関連株 コンヴァノ｜取締役が語る2.1万BTC保有戦略と覚悟」に出演しました。</p>
               </a>
             </div>
           </div>
