--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1235,8 +1235,8 @@ margin-left:55%;
           class="image_layout_type2 image_layout2_type2 image_layout_mobile_type3 text_layout_type2 animation_type1 no_layer_image">
           <div id="page_header_inner">
             <div class="caption">
-              <p class="sub_title animate_item rich_font_type2"><span class="btc_news_pageTitle">出演実績・経歴</span></p>
-              <h1 class="catch  animate_item rich_font_type2">Media and Career</h1>
+              <p class="sub_title animate_item rich_font_type2 animate"><span>出演実績・経歴</span></p>
+              <h1 class="catch animate_item rich_font_type2 animate">Media and Career</h1>
             </div>
           </div>
           <div class="overlay" style="background:rgba(0,0,0,0.1);"></div>
@@ -1260,10 +1260,10 @@ margin-left:55%;
               <p class="mac__name">上四元 絢<span class="mac__name-en">Aya Kamiyotsumoto</span></p>
               <div class="mac__sns">
                 <a href="https://x.com/KeMfm36" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_x.png" width="32" height="32" alt="X アイコン">
+                  <img src="./img/media-career/icon_x.svg" width="32" height="32" alt="X アイコン">
                 </a>
                 <a href="https://www.instagram.com/aya_convano/" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_instagram.png" width="32" height="32" alt="Instagram アイコン">
+                  <img src="./img/media-career/icon_instagram.svg" width="32" height="32" alt="Instagram アイコン">
                 </a>
               </div>
               <div class="mac__table">
@@ -1299,12 +1299,12 @@ margin-left:55%;
           <p class="mac__head">出演実績</p>
           <div class="mac__media">
             <div class="mac__media-item">
-              <a href="https://www.radionikkei.jp/ohayo/" class="mac__media-link" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.radionikkei.jp/fukunokami/20250904.html" class="mac__media-link" target="_blank" rel="noopener noreferrer">
                 <div class="mac__media-img">
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
-                  <span class="mac__media-cate">web</span>
+                  <span class="mac__media-cate">ラジオ</span>
                   <span class="mac__media-date">2025年9月4日</span>
                 </div>
                 <p class="mac__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
@@ -1323,17 +1323,17 @@ margin-left:55%;
               <p class="mac__name">東 大陽<span class="mac__name-en">Motokiyo Azuma</span></p>
               <div class="mac__sns">
                 <a href="https://x.com/MotokiyoAzuma" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_x.png" width="32" height="32" alt="X アイコン">
+                  <img src="./img/media-career/icon_x.svg" width="32" height="32" alt="X アイコン">
                 </a>
                 <a href="https://www.youtube.com/@MotokiyoA.convano" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_youtube.png" width="32" height="32" alt="Youtube アイコン">
+                  <img src="./img/media-career/icon_youtube.svg" width="32" height="32" alt="Youtube アイコン">
                 </a>
               </div>
               <p class="mac_text">「事業で稼ぎ、構造で守る」二刀流企業設計者｜BTC保有戦略責任者／新規事業×財務戦略のクロスオーバー実行者。<br>元エンジニア×事業開発×財務×ガバナンスのクロスオーバー領域を専門とし、「円で稼ぎ、円を守る」企業設計を追求しています。</p>
               <div class="mac__table">
                 <dl class="mac__dl">
                   <dt class="mac__dt">2008年10月</dt>
-                  <dd class="mac__dd">（株）コスパクリエーション　入社</dd>
+                  <dd class="mac__dd">（株）NSD　入社</dd>
 
                   <dt class="mac__dt">2014年8月</dt>
                   <dd class="mac__dd">（株）コスパクリエーション　入社</dd>
@@ -1354,7 +1354,7 @@ margin-left:55%;
                   <dd class="mac__dd">当社取締役（現任）</dd>
 
                   <dt class="mac__dt">2025年6月</dt>
-                  <dd class="mac__dd">M&Aテクノマージコンサルティング（株） （現 虎ノ門キャピタル（株））　代表取締役社長（現任）</dd>
+                  <dd class="mac__dd">M&Aテクノマージコンサルティング（株） （現　虎ノ門キャピタル（株））　代表取締役社長（現任）</dd>
                 </dl>
               </div>
             </div>
@@ -1368,10 +1368,22 @@ margin-left:55%;
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
-                  <span class="mac__media-cate">web</span>
-                  <span class="mac__media-date">2025年9月4日</span>
+                  <span class="mac__media-cate">ラジオ</span>
+                  <span class="mac__media-date">2025年10月7日</span>
                 </div>
-                <p class="mac__media-title">ラジオNIKKEI「この企業に注目！相場の福の神」にゲストとして出演しました。</p>
+                <p class="mac__media-title">ラジオNIKKEI「おはようマーケットIR特集」にゲストとして出演しました。</p>
+              </a>
+            </div>
+            <div class="mac__media-item">
+              <a href="https://newspicks.com/movie-series/158/?movieId=5962" target="_blank" rel="noopener noreferrer" class="mac__media-link">
+                <div class="mac__media-img">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                </div>
+                <div class="mac__media-meta">
+                  <span class="mac__media-cate">Web動画</span>
+                  <span class="mac__media-date">2025年10月4日</span>
+                </div>
+                <p class="mac__media-title">ビジネスニュースメディア「NewsPicks」にて取材を受けました。</p>
               </a>
             </div>
             <div class="mac__media-item">
@@ -1399,13 +1411,13 @@ margin-left:55%;
               </a>
             </div>
             <div class="mac__media-item">
-              <a href="" class="mac__media-link">
+              <a href="https://www.coindeskjapan.com/314079/" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
                   <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
-                  <span class="mac__media-cate">web</span>
-                  <span class="mac__media-date">2025年9月18日</span>
+                  <span class="mac__media-cate">Web</span>
+                  <span class="mac__media-date">2025年9月15日</span>
                 </div>
                 <p class="mac__media-title">ビジネスニュースメディア「CoinDesk JAPAN」にて取材を受けました。</p>
               </a>
