--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1253,7 +1253,10 @@ margin-left:55%;
         <div class="mac">
           <div class="mac__career">
             <div class="mac__img">
+            <picture>
+              <source media="(max-width: 640px)" srcset="./img/media-career/aya-kamiyotsumoto.jpg" width="525" height="525">
               <img src="./img/media-career/aya-kamiyotsumoto.jpg" width="350" height="350" alt="上四元 絢">
+            </picture>
             </div>
             <div class="mac__cont">
               <p class="mac__position">株式会社コンヴァノ 代表取締役社長</p>
@@ -1316,17 +1319,20 @@ margin-left:55%;
         <div class="mac">
           <div class="mac__career">
             <div class="mac__img">
-              <img src="./img/media-career/motokiyo-aqzuma.jpg" width="350" height="350" alt="東 大陽">
+              <picture>
+                <source media="(max-width: 640px)" srcset="./img/media-career/sp_motokiyo-aqzuma.jpg" width="525" height="525">
+                <img src="./img/media-career/motokiyo-aqzuma.jpg" width="350" height="350" alt="東 大陽">
+              </picture>
             </div>
             <div class="mac__cont">
               <p class="mac__position">株式会社コンヴァノ 取締役｜ビットコイン保有戦略室 責任者<br>株式会社Convano Consulting　代表取締役<br>虎ノ門キャピタル株式会社　代表取締役</p>
               <p class="mac__name">東 大陽<span class="mac__name-en">Motokiyo Azuma</span></p>
               <div class="mac__sns">
                 <a href="https://x.com/MotokiyoAzuma" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_x.svg" width="32" height="32" alt="X アイコン">
+                  <img src="./img/media-career/icon_x.svg" width="32" height="32" alt="X アイコン" loading="lazy">
                 </a>
                 <a href="https://www.youtube.com/@MotokiyoA.convano" target="_blank" rel="noopener noreferrer">
-                  <img src="./img/media-career/icon_youtube.svg" width="32" height="32" alt="Youtube アイコン">
+                  <img src="./img/media-career/icon_youtube.svg" width="32" height="32" alt="Youtube アイコン" loading="lazy">
                 </a>
               </div>
               <p class="mac_text">「事業で稼ぎ、構造で守る」二刀流企業設計者｜BTC保有戦略責任者／新規事業×財務戦略のクロスオーバー実行者。<br>元エンジニア×事業開発×財務×ガバナンスのクロスオーバー領域を専門とし、「円で稼ぎ、円を守る」企業設計を追求しています。</p>
