名前変更あげ

--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1320,8 +1320,8 @@ margin-left:55%;
           <div class="mac__career">
             <div class="mac__img">
               <picture>
-                <source media="(max-width: 640px)" srcset="./img/media-career/sp_motokiyo-aqzuma.jpg" width="525" height="525">
-                <img src="./img/media-career/motokiyo-aqzuma.jpg" width="350" height="350" alt="東 大陽">
+                <source media="(max-width: 640px)" srcset="./img/media-career/sp_motokiyo-azuma.jpg" width="525" height="525">
+                <img src="./img/media-career/motokiyo-azuma.jpg" width="350" height="350" alt="東 大陽" loading="lazy">
               </picture>
             </div>
             <div class="mac__cont">
@@ -1453,7 +1453,7 @@ margin-left:55%;
               </a>
             </div>
           </div>
-          <a href="https://convano.com/_test/media-and-career-higashi.html" class="mac__btn">その他出演実績はこちら</a>
+          <a href="https://convano.com/_test/media-and-career-azuma.html" class="mac__btn">その他出演実績はこちら</a>
         </div>
       </div>
 
