【修正】azuma側にリンクつけ忘れ

--- a/media-and-career-azuma.html
+++ b/media-and-career-azuma.html
@@ -1189,6 +1189,9 @@ margin-left:55%;
                     <li id="menu-item-520"
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-520 "><a
                         href="https://convano.com/company-profile#トップメッセージ">トップメッセージ</a></li>
+                    <li id="menu-item-520"
+                      class="menu-item menu-item-type-custom menu-item-object-custom menu-item-520 "><a
+                        href="https://convano.com/_test/media-and-career.html">出演実績・経歴</a></li>
                     <li id="menu-item-521"
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-521 "><a
                         href="https://convano.com/company-profile#会社情報">会社情報</a></li>
@@ -1255,7 +1258,7 @@ margin-left:55%;
             <div class="mac__media-item">
               <a href="https://www.radionikkei.jp/ohayo/" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">ラジオ</span>
@@ -1267,7 +1270,7 @@ margin-left:55%;
             <div class="mac__media-item">
               <a href="https://newspicks.com/movie-series/158/?movieId=5962" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb_logo.jpg" width="240" height="136" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">Web動画</span>
@@ -1279,7 +1282,7 @@ margin-left:55%;
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=VOLOgvYj3Sk&t=15s" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb01.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb01.jpg" width="240" height="136" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
@@ -1291,7 +1294,7 @@ margin-left:55%;
             <div class="mac__media-item">
               <a href="https://www.youtube.com/watch?v=oxgiLVdF9Ms" target="_blank" rel="noopener noreferrer" class="mac__media-link">
                 <div class="mac__media-img">
-                  <img src="./img/media-career/thumb02.jpg" width="240" height="136" loading="lazy" alt="サムネイル画像">
+                  <img src="./img/media-career/thumb02.jpg" width="240" height="136" alt="サムネイル画像">
                 </div>
                 <div class="mac__media-meta">
                   <span class="mac__media-cate">YouTube</span>
@@ -1381,7 +1384,7 @@ margin-left:55%;
               <li><a class="page-numbers"
                   href="/?post_type=media&amp;paged=20">20</a></li>
               <li><a class="next page-numbers"
-                  href="/?post_type=media&amp;paged=2"><span>»</span></a></li>
+                  href="/news-topics/page/2"><span>»</span></a></li>
             </ul>
 
           </div>
@@ -1439,6 +1442,8 @@ margin-left:55%;
                   <ul>
                     <a
                       href="https://convano.com/companyprofile#トップメッセージ"><li>トップメッセージ</li></a>
+                    <a
+                      href="https://convano.com/_test/media-and-career.html"><li>出演実績・経歴</li></a>
                     <a
                       href="https://convano.com/companyprofile#会社情報"><li>会社情報</li></a>
                     <a
@@ -1522,6 +1527,9 @@ margin-left:55%;
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-520 "><a
                         href="https://convano.com/company-profile#トップメッセージ">トップメッセージ</a></li>
                     <li
+                      class="menu-item menu-item-type-custom menu-item-object-custom menu-item-520 "><a
+                        href="https://convano.com/_test/media-and-career.html">出演実績・経歴</a></li>
+                    <li
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-521 "><a
                         href="https://convano.com/company-profile#会社情報">会社情報</a></li>
                     <li
@@ -1535,9 +1543,6 @@ margin-left:55%;
                 <li
                   class="menu-item menu-item-type-custom menu-item-object-custom menu-item-512 "><a
                     href="http://www.convano.com/ir/">IR情報</a></li>
-                <li
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9999 "><a
-                    href="https://convano.com/shareholder-benefits.html">株主優待</a></li>
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-624 "><a
                     href="https://convano.com/careers">採用情報</a></li>
