--- a/media-and-career-azuma.html
+++ b/media-and-career-azuma.html
@@ -1252,8 +1252,8 @@ margin-left:55%;
       </div>
 
       <div class="mac__inner">
-        <div class="mac">
-          <p class="mac__head">東 大陽 メディア出演実績</p>
+        <div class="mac mac--postType">
+          <p class="mac__head mac__head--top">東 大陽 メディア出演実績</p>
           <div class="mac__media">
             <div class="mac__media-item">
               <a href="https://www.radionikkei.jp/ohayo/" target="_blank" rel="noopener noreferrer" class="mac__media-link">
